# ParsedToPlot-Rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
Input/: conll.txt  constituencies.txt
src/: config.rs  conll_2_plot.rs  conll_2_string.rs  generic_enums.rs  generic_traits.rs  lib.rs  string_2_conll.rs  string_2_tree.rs  sub_tree_children.rs  tree_2_plot.rs  tree_2_string.rs  walk_tree.rs
