[package]
name = "parsed_to_plot"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "plots constituency trees and dependency trees given by strings."
repository = "https://github.com/Sabn0/ParsedToPlot-Rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id_tree = "1.8.0"
plotters = "0.3.4"